# vibescan

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  HIGH_PRIORITY_GAPS_PLAN.md  LICENSE  README.md  RELEASING.md  STATE.md  dist-workspace.toml  repomix.config.json  rust-toolchain.toml  vibescan-architecture.md  vibescan-cla-entity.md  vibescan-cla-individual.md  vibescan-hardening-instructions.md  vibescan-tierA1-tierB3-instructions.md  vibescan-tierC-instructions.md  vibescan-tierD-instructions.md
.github/workflows/: ci.yml  cla.yml  npm-smoke.yml  package-npm.yml  publish-all.yml  publish-crates.yml  publish-npm.yml  release.yml  verify-static-linux.yml
crates/vibescan-cli/: AGENTS.md  Cargo.toml
crates/vibescan-cli/src/: main.rs
crates/vibescan-cli/tests/: phase0_regressions.rs
crates/vibescan-core/: AGENTS.md  Cargo.toml
crates/vibescan-core/src/: lib.rs
crates/vibescan-core/tests/: golden_corpus.rs  perf_counters.rs  precision_recall.rs  redaction_boundary.rs
crates/vibescan-core/tests/common/: mod.rs
crates/vibescan-git/: AGENTS.md  Cargo.toml
crates/vibescan-git/src/: lib.rs
crates/vibescan-registry/: AGENTS.md  Cargo.toml
crates/vibescan-registry/src/: lib.rs
crates/vibescan-report/: AGENTS.md  Cargo.toml
crates/vibescan-report/src/: lib.rs
crates/vibescan-report/tests/: report_snapshots.rs
crates/vibescan-secrets/: AGENTS.md  Cargo.toml
crates/vibescan-secrets/src/: lib.rs
crates/vibescan-secrets/src/rules/: default-rules.toml
crates/vibescan-supabase/: AGENTS.md  Cargo.toml
crates/vibescan-supabase/src/: lib.rs
crates/vibescan-types/: AGENTS.md  Cargo.toml
crates/vibescan-types/src/: lib.rs
crates/vibescan-types/tests/fixtures/: scan-result-before-perf-counters.json
docs/: STATE-HISTORY.md  moltbook-teardown.md  vibescan-postv1-roadmap.md  vibescan-tierD-instructions.md  vibescan-tierE-instructions.md  vibescan-tierF-closeout-instructions.md  vibescan-tierF-instructions.md  vibescan-trackG-closeout-instructions.md  vibescan-trackG-instructions.md  vibescan-trackH-instructions.md  vibescan-trackI-security-design.md
npm/: package.json
npm/scripts/: build-packages.mjs  platforms.mjs  publish-packages.mjs  smoke-packages.mjs  verify-packages.mjs
npm/test/: publish.test.mjs  shim.test.mjs
npm/test/fixtures/: exit-code.mjs
npm/vibescan/: README.md  package.json
scripts/: AGENTS.md  check-network-boundary.py  check-network-boundary.sh  publish-crates.sh  real-repo-invariants.py  test-publish-crates.sh  verify-hardening-checks.sh  verify-release-publishing.py
tests/fixtures/: AGENTS.md  corpus-metrics-baseline.json
tests/fixtures/clean-control/repo/: package.json
tests/fixtures/clean-control/repo/src/app/: page.tsx
tests/fixtures/exposed-public-key-chain/: expected.json
tests/fixtures/hallucinated-dependency/: expected.json
tests/fixtures/hallucinated-dependency/repo/: package.json
tests/fixtures/history-only-elevated-key/: expected.json  history.bundle
tests/fixtures/malformed-dependency/: expected.json
tests/fixtures/malformed-dependency/repo/: package.json
tests/fixtures/monorepo-layout/: expected.json
tests/fixtures/monorepo-layout/repo/apps/web/.next/static/chunks/: x.js
tests/fixtures/nested-gitignore/: expected.json
tests/fixtures/offline-composite-exposed-public-key-chain/: expected.json
tests/fixtures/permissive-using-true-policy/: expected.json
tests/fixtures/publishable-client-reachable/: expected.json
tests/fixtures/publishable-client-reachable/repo/src/app/: page.tsx
tests/fixtures/report-format-snapshots/: html.snapshot  json.snapshot  sarif.snapshot  tty.snapshot
tests/fixtures/rls-off-table/: expected.json
tests/fixtures/src-api-client-wrapper/: expected.json
tests/fixtures/src-api-client-wrapper/repo/src/api/: supabase-client.ts
tests/fixtures/vendor-chunks-noise/: expected.json
tests/fixtures/vendor-chunks-noise/repo/src/server/: secret.ts
