[workspace]
members = [
    "crates/vibescan-cli",
    "crates/vibescan-core",
    "crates/vibescan-git",
    "crates/vibescan-registry",
    "crates/vibescan-report",
    "crates/vibescan-secrets",
    "crates/vibescan-supabase",
    "crates/vibescan-types",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/jiayanzeng/vibescan"
license = "MIT"
repository = "https://github.com/jiayanzeng/vibescan"
rust-version = "1.85"

[workspace.dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
gix-discover = { version = "0.52.0", features = ["sha1"] }
gix-hash = { version = "0.25.1", features = ["sha1"] }
gix-object = "0.61.0"
gix-odb = "0.81.0"
globset = "0.4.18"
hex = "0.4.3"
ignore = "0.4.24"
jiff = "0.2.31"
rayon = "1.10.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
toml = "0.9.12"
vibescan-core = { path = "crates/vibescan-core", version = "0.1.3" }
vibescan-git = { path = "crates/vibescan-git", version = "0.1.3" }
vibescan-registry = { path = "crates/vibescan-registry", version = "0.1.3" }
vibescan-report = { path = "crates/vibescan-report", version = "0.1.3" }
vibescan-secrets = { path = "crates/vibescan-secrets", version = "0.1.3" }
vibescan-supabase = { path = "crates/vibescan-supabase", version = "0.1.3" }
vibescan-types = { path = "crates/vibescan-types", version = "0.1.3" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
