[package]
name = "vibescan-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for vibescan."

[[bin]]
name = "vibescan"
path = "src/main.rs"

[features]
default = []
network = ["vibescan-core/network"]

[dependencies]
clap.workspace = true
vibescan-core.workspace = true
