[package]
name = "vibescan-cli"
version = "0.1.2"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for vibescan"

[[bin]]
name = "vibescan"
path = "src/main.rs"

[features]
default = []
network = ["vibescan-core/network"]
registry = ["vibescan-core/registry"]

[dependencies]
clap.workspace = true
vibescan-core.workspace = true
