[package]
name = "vibescan-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Offline scan orchestration and correlation for vibescan."

[dependencies]
hex.workspace = true
jiff.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
vibescan-git.workspace = true
vibescan-report.workspace = true
vibescan-secrets.workspace = true
vibescan-supabase.workspace = true
vibescan-types.workspace = true
