[package]
name = "vibescan-core"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "Local-first scan orchestration and opt-in enrichment for vibescan."

[features]
default = []
network = ["vibescan-supabase/network"]
registry = ["dep:vibescan-registry", "vibescan-registry/transport"]

[dependencies]
hex.workspace = true
jiff.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
vibescan-git.workspace = true
vibescan-registry = { workspace = true, optional = true }
vibescan-report.workspace = true
vibescan-secrets.workspace = true
vibescan-supabase.workspace = true
vibescan-types.workspace = true
