[package]
name = "vibescan-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LocalStatic git history and working tree collector for vibescan."

[dependencies]
gix-discover.workspace = true
gix-hash.workspace = true
gix-object.workspace = true
gix-odb.workspace = true
globset.workspace = true
ignore.workspace = true
vibescan-types.workspace = true

[dev-dependencies]
vibescan-secrets = { path = "../vibescan-secrets" }
