[package]
name = "vibescan-git"
version = "0.1.2"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "LocalStatic git history and working tree collector for vibescan."

[dependencies]
gix-discover.workspace = true
gix-hash.workspace = true
gix-object.workspace = true
gix-odb.workspace = true
globset.workspace = true
ignore.workspace = true
sha2.workspace = true
vibescan-types.workspace = true
