[package]
name = "vibescan-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Opt-in public package-registry intelligence for vibescan."

[features]
default = []
transport = ["dep:reqwest", "dep:zip"]

[dependencies]
hex.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
vibescan-types.workspace = true
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"], optional = true }
