[package]
name = "vibescan-report"
version = "0.1.3"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "Report renderers for vibescan scan results."

[dependencies]
serde_json.workspace = true
vibescan-types.workspace = true
