[package]
name = "vibescan-secrets"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "LocalStatic secret detection substrate for vibescan."

[dependencies]
rayon.workspace = true
regex.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
vibescan-types.workspace = true

[dev-dependencies]
serde_json.workspace = true
