[package]
name = "vibescan-supabase"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Supabase domain intelligence for vibescan."

[features]
default = []
network = ["dep:reqwest"]

[dependencies]
base64.workspace = true
hex.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde_json.workspace = true
sha2.workspace = true
vibescan-types.workspace = true

[dev-dependencies]
# Test-only exception to the production layering rule: classifier fixtures use
# detector helpers to assert integration with Supabase-shaped candidates.
vibescan-secrets = { path = "../vibescan-secrets" }
