[package]
name = "vibescan-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared vocabulary for the vibescan scanner workspace."

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
